--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@
 body {
     margin: 0;
     font-family: "Roboto regular", sans-serif;    
+    font-size: 1.1rem;
 }
 
 a {
@@ -29,6 +30,21 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+main {
+    margin-top: 2rem;
+    margin-bottom: 6rem;
+}
+
+section {
+    display: flex;
+    justify-content: space-between;
+}
+
+h2, p {
+    padding-left: 2rem;
+    padding-right: 4.1rem;
 }
 
 .container {
@@ -48,4 +64,47 @@ nav {
     justify-content: space-between;
     width: 20%;
     font-size: 1.5rem;
+    list-style: none;
+}
+
+.card {
+    width: 30%;
+    border: 0.1rem solid black;
+    box-shadow: 0.5rem 0.5rem 0.3rem 0.1rem rgba(0, 0, 0, 0.40);
+    border-radius: 2%;
+    position: relative;
+    padding-bottom: 6rem;
+}
+
+.img-container {
+    height: 60%;
+}
+
+.img-card {
+    border-top-left-radius: 2%;
+    border-top-right-radius: 2%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.btn {
+    position: absolute;
+    color: white;
+    padding: 1rem;
+    transform: translate(-50%, -50%);
+    bottom: -2%;
+    left: 50%;
+}
+
+.btn-paris {
+    background-color: rgb(77, 148, 219);
+}
+
+.btn-tokyo {
+    background-color: rgba(235, 58, 39, 0.844);
+}
+
+.btn-newyork {
+    background-color: rgb(110, 68, 140);
 }
