--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,13 +56,12 @@ h2, p {
 
 #logo {
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 #nav-a {
     display: flex;
-    justify-content: space-between;
-    width: 20%;
+    gap: 30px;
     font-size: 1.5rem;
     list-style: none;
 }
@@ -74,27 +73,27 @@ h2, p {
     border-radius: 2%;
     position: relative;
     padding-bottom: 6rem;
+    overflow: hidden;
 }
 
 .img-container {
     height: 60%;
+    max-height: 350px;
 }
 
 .img-card {
-    border-top-left-radius: 2%;
-    border-top-right-radius: 2%;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
 .btn {
-    position: absolute;
     color: white;
     padding: 1rem;
-    transform: translate(-50%, -50%);
-    bottom: -2%;
+    position: absolute;
+    bottom: 2%;
     left: 50%;
+    transform: translateX(-50%);
 }
 
 .btn-paris {
